@@ -17,8 +17,11 @@
  */
 
 #include <grub/symbol.h>
+#include <grub/dl.h>
 
 	.file	"setjmp.S"
+
+GRUB_MOD_LICENSE ("GPLv3+")
 
 	.text
 
